<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="mpsdk_empty_bank_deals">No tienes ninguna promoción disponible</string>
    <string name="mpsdk_bank">banco</string>
    <string name="mpsdk_and">y</string>
    <string name="mpsdk_title_activity_bank_deals">Promociones</string>
    <string name="mpsdk_title_activity_payment_methods">¿Cómo quieres pagar?</string>
    <string name="mpsdk_title_activity_customer_pms">¿Con qué tarjeta?</string>
    <string name="other_payment_method">Otro medio de pago…</string>
    <string name="mpsdk_cod_seg_desc">Últimos <xliff:g example="4" id="numeros">%1$d</xliff:g> números al dorso de la tarjeta</string>
    <string name="mpsdk_cod_seg_desc_amex"><xliff:g example="4" id="numeros">%1$d</xliff:g> números al frente de la tarjeta</string>
    <string name="mpsdk_title_activity_vault">Pagar</string>
    <string name="mpsdk_select_pm_label">Selecciona un medio de pago…</string>
    <string name="mpsdk_last_digits_label">Terminada en</string>
    <string name="mpsdk_account_money_description">Dinero en cuenta \nde Mercado Pago</string>
    <string name="mpsdk_confirm">Confirmar</string>
    <string name="mpsdk_title_activity_payment_vault">¿Cómo quieres pagar?</string>
    <string name="mpsdk_invalid_pm_for_current_amount">El medio de pago que elegiste no se puede usar para pagar ese monto. Por favor selecciona otro</string>
    <string name="mpsdk_no_payment_methods_found">No hay medios de pago disponibles</string>
    <string name="mpsdk_payment_method_groups_label">Otros</string>
    <string name="mpsdk_pay_with_this_data">Paga con estos datos</string>
    <string name="mpsdk_card_issuers_title">¿Quién emitió tu tarjeta?</string>
    <string name="mpsdk_card_installments_title">¿En cuántas cuotas?</string>
    <string name="mpsdk_installments_of">de</string>
    <string name="mpsdk_installments_by" translatable="false">x</string>
    <string name="mpsdk_installments_tea" translatable="false">TEA</string>
    <string name="mpsdk_installments_cft" translatable="false">CFT</string>
    <string name="mpsdk_text_terms_and_conditions_start">Al pagar, afirmo que soy mayor de edad y acepto los</string>
    <string name="mpsdk_text_terms_and_conditions_linked">Términos y condiciones</string>
    <string name="mpsdk_text_terms_and_conditions_end">de Mercado Pago</string>
    <string name="mpsdk_payment_amount_to_pay">Total a pagar</string>
    <string name="mpsdk_pay_button_text">Pagar</string>
    <string name="mpsdk_press_again_confirm">Si presionas de nuevo reiniciarás la selección</string>
    <string name="mpsdk_title_activity_checkout">Revisa si está todo bien…</string>
    <string name="mpsdk_invalid_card_number_incomplete">Ingresa todos los números de la tarjeta</string>
    <string name="mpsdk_invalid_empty_name">Ingresa el nombre y apellido impreso en la tarjeta</string>
    <string name="mpsdk_invalid_expiry_date">La fecha que ingresaste es inválida</string>
    <string name="mpsdk_invalid_identification_number">Ingresa todos los números</string>
    <string name="mpsdk_invalid_identification_name">Ingresa tu nombre</string>
    <string name="mpsdk_invalid_identification_last_name">Ingresa tu apellido</string>
    <string name="mpsdk_invalid_identification_business_name">Ingresa la razón social</string>
    <string name="mpsdk_invalid_payment_method">No puedes pagar con este medio de pago</string>
    <string name="mpsdk_card_number_label">Número de tarjeta</string>
    <string name="mpsdk_card_expire_date_label">Fecha de expiración</string>
    <string name="mpsdk_cardholder_name">Nombre y apellido</string>
    <string name="mpsdk_name">Nombre</string>
    <string name="mpsdk_lastname">Apellido</string>
    <string name="mpsdk_doc_type_label">Tipo</string>
    <string name="mpsdk_doc_number_label">Documento</string>
    <string name="mpsdk_bank_deals_action">Ver promociones</string>
    <string name="mpsdk_security_code">Código de seguridad</string>
    <string name="mpsdk_continue_label">Continuar</string>
    <string name="mpsdk_payment_method">Medio de pago</string>
    <string name="mpsdk_issuer_label">Banco</string>
    <string name="mpsdk_invalid_card_bin">El número de tarjeta que ingresaste no se corresponde con el tipo de tarjeta</string>
    <string name="mpsdk_invalid_card_luhn">El número de tarjeta que ingresaste es incorrecto</string>
    <string name="mpsdk_invalid_card_length">Ingresa los %1$s números de la tarjeta</string>
    <string name="mpsdk_invalid_cvv_length">Ingresa los %1$s números del código de seguridad</string>
    <string name="mpsdk_invalid_field">Revisa este dato</string>
    <string name="mpsdk_invalid_empty_card">Ingresa el número de la tarjeta de crédito</string>
    <string name="mpsdk_card_expiry_date_hint">Mes / Año</string>
    <string name="mpsdk_card_expiry_month_hint">MM</string>
    <string name="mpsdk_card_expiry_divider_hint">/</string>
    <string name="mpsdk_card_expiry_year_hint">AA</string>
    <string name="mpsdk_card_identification_label">DOCUMENTO DEL TITULAR\nDE LA TARJETA</string>
    <string name="mpsdk_ticket_identification_label">DATOS PARA VALIDAR SU PAGO</string>
    <string name="mpsdk_name_and_lastname_identification_label">NOMBRE Y APELLIDO</string>
    <string name="mpsdk_card_identification_number">Número</string>
    <string name="mpsdk_card_identification_type">Tipo</string>
    <string name="mpsdk_cardholder_name_short">NOMBRE APELLIDO</string>
    <string name="mpsdk_title_activity_new_card">Ingresa los datos de tu tarjeta</string>
    <string name="mpsdk_more_info">MÁS INFO</string>
    <string name="mpsdk_try_other_card">Ingresar tarjeta</string>
    <string name="mpsdk_you_can_finish_your_payment_with_cards">No te preocupes, aún puedes terminar tu pago con:</string>
    <string name="mpsdk_invalid_card_payment_method">No puedes pagar con esta tarjeta</string>
    <string name="mpsdk_exclusion_one_element">Solo puedes pagar con %1$s</string>
    <string name="mpsdk_title_approved_payment">¡Listo! Se acreditó tu pago</string>
    <string name="mpsdk_subtitle_action_activity_congrats">Te enviaremos los datos a\n%1$s</string>
    <string name="mpsdk_text_state_account_activity_congrats">En tu estado de cuenta verás el cargo como\n %s</string>
    <string name="mpsdk_payment_id_description">Comprobante</string>
    <string name="mpsdk_payment_id_description_number">Nº %1$s</string>
    <string name="mpsdk_statement_default">MERCADO PAGO</string>
    <string name="mpsdk_account_money">Dinero en cuenta</string>
    <string name="mpsdk_ending_in">terminada en</string>
    <string name="mpsdk_receipt">Número de operación %1$s</string>
    <string name="mpsdk_date_divider">de</string>
    <string name="mpsdk_title_activity_call_for_authorize">Debes autorizar ante %1$s el pago de %2$s a Mercado Pago</string>
    <string name="mpsdk_text_order_call_for_authorize">El teléfono está al dorso de tu tarjeta.</string>
    <string name="mpsdk_error_title_activity_call_for_authorize">Debes autorizar el pago ante tu tarjeta</string>
    <string name="mpsdk_text_authorized_call_for_authorize">Ya hablé con %1$s y me autorizó</string>
    <string name="mpsdk_text_select_other_payment_method">Elige otro medio de pago</string>
    <string name="mpsdk_title_pending_payment">Estamos procesando el pago</string>
    <string name="mpsdk_title_pending">Estamos procesando\n el pago</string>
    <string name="mpsdk_subtitle_pending_contingency">En menos de 1 hora te enviaremos por e-mail el resultado.</string>
    <string name="mpsdk_subtitle_pending_review_manual">En menos de 2 días hábiles te diremos por e-mail si se acreditó o si necesitamos más información.</string>
    <string name="mpsdk_pending_label">¡Apúrate a pagar!</string>
    <string name="mpsdk_error_description_contingency">En unas horas te avisaremos por e-mail si se acreditó.</string>
    <string name="mpsdk_error_description_review_manual">Dentro de las próximas 24 horas te avisaremos por e-mail si se acreditó.</string>
    <string name="mpsdk_text_other_payment_method_button_rejection">Usar otro medio de pago</string>
    <string name="mpsdk_text_pay_with_other_method">Pagar con otro medio</string>
    <string name="mpsdk_text_enter_again">Ingrésalo nuevamente</string>
    <string name="mpsdk_subtitle_rejection_insufficient_amount_credit_card">¡No te desanimes! Puedes elegir otro medio de pago.</string>
    <string name="mpsdk_title_other_reason_rejection">%1$s no procesó el pago</string>
    <string name="mpsdk_text_select_other_rejection">Usa otra tarjeta u otro medio de pago</string>
    <string name="mpsdk_text_some_card_data_is_incorrect">Algún dato de tu %1$s es incorrecto</string>
    <string name="mpsdk_text_card_data_invalid">Revisar los datos de tarjeta</string>
    <string name="mpsdk_text_card_enabled">Ya habilité mi tarjeta</string>
    <string name="mpsdk_title_bad_filled_other">Uy, no pudimos procesar el pago</string>
    <string name="mpsdk_text_some_number">Algún número de tu %1$s es incorrecto.</string>
    <string name="mpsdk_text_insufficient_amount">Tu %1$s no tiene fondos suficientes</string>
    <string name="mpsdk_subtitle_rejection_insufficient_amount">¡No te desanimes! Recárgala en cualquier banco o desde tu banca electrónica e inténtalo de nuevo. O si prefieres, puedes elegir otro medio de pago.</string>
    <string name="mpsdk_subtitle_rejection_duplicated_payment">Si necesitas volver a pagar usa otra tarjeta u otro medio de pago.</string>
    <string name="mpsdk_text_active_card">Llama a %1$s para que active tu tarjeta</string>
    <string name="mpsdk_subtitle_rejection_card_disabled">El teléfono está al dorso de tu tarjeta.</string>
    <string name="mpsdk_title_bad_filled_security_code">El código de seguridad no es el correcto.</string>
    <string name="mpsdk_title_bad_filled_date">La fecha de vencimiento no es la correcta.</string>
    <string name="mpsdk_title_rejection_high_risk">Por seguridad, tuvimos que rechazar tu pago</string>
    <string name="mpsdk_subtitle_rejection_high_risk">Si quieres pagar con el dinero de tu cuenta, contactate con Atención al Cliente de Mercado Pago. O si prefieres, puedes elegir otro medio de pago.</string>
    <string name="mpsdk_title_rejection_max_attempts">Llegaste al límite de intentos permitidos</string>
    <string name="mpsdk_subtitle_rejection_max_attempts">Elige otra tarjeta u otro medio de pago.</string>
    <string name="mpsdk_rejection_label">Algo salió mal…</string>
    <string name="mpsdk_error_description_call">El teléfono está al dorso de tu tarjeta.</string>
    <string name="mpsdk_error_description_card_disabled">Usa otro medio de pago o llama a %1$s para activar tu tarjeta.</string>
    <string name="mpsdk_error_description_insufficient_amount">¡No te desanimes! Recárgala en cualquier banco o desde tu banca electrónica e inténtalo de nuevo.</string>
    <string name="mpsdk_error_description_second_insufficient_amount">O si prefieres, puedes elegir otro medio de pago.</string>
    <string name="mpsdk_error_description_other_reason">Usa otra tarjeta u otro medio de pago.</string>
    <string name="mpsdk_error_title">¡Uy! Algo salió mal</string>
    <string name="mpsdk_standard_error_message">Vamos a solucionarlo. Intenta más tarde.</string>
    <string name="mpsdk_text_continue">Continuar</string>
    <string name="mpsdk_exit_label">Salir</string>
    <string name="mpsdk_input_button_back">Anterior</string>
    <string name="mpsdk_input_button_next">Continuar</string>
    <string name="mpsdk_refresh_message">Reintentar</string>
    <string name="mpsdk_review_summary_products">Productos</string>
    <string name="mpsdk_review_summary_subtotal">Subtotal</string>
    <string name="mpsdk_review_summary_pay">Pagas</string>
    <string name="mpsdk_review_summary_total">Total</string>
    <string name="mpsdk_review_summary_discount">Descuento</string>
</resources>