<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mpsdkRefreshLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/mpsdkErrorImage"
            android:layout_marginTop="100dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/mpsdk_icon_error"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="20dp" />

        <com.mercadopago.customviews.MPTextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/mpsdk_error_title"
            android:textSize="25dp"
            android:textColor="@color/mpsdk_dark_font_color"
            android:layout_marginBottom="10dp" />

        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/mpsdk_standard_error_message"
            android:gravity="center"
            android:layout_gravity="center_horizontal|top"
            android:textColor="@color/mpsdk_dark_font_color"
            android:textSize="16dp"/>

        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkErrorRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpsdk_refresh_message"
            android:gravity="center"
            android:layout_gravity="center_horizontal|top"
            android:textSize="25dp"
            android:padding="15dp"
            android:textColor="@color/mpsdk_color_link"
            android:layout_marginTop="10dp"/>

        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpsdk_exit_label"
            android:textSize="22dp"
            android:padding="20dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/mpsdk_color_link"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true" />
    </LinearLayout>
</RelativeLayout>
