<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginStart="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginEnd="25dp"
    android:layout_marginTop="16dp"
    android:background="@color/mpsdk_white">
    <LinearLayout
        android:id="@+id/mpsdkReviewSummaryProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkReviewSummaryProductsLabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="start"
            android:textSize="18dp"
            android:text="@string/mpsdk_review_summary_products"/>
        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkReviewSummaryProductsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:textSize="18dp"
            tools:text="$124"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mpsdkReviewSummaryDiscounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkReviewSummaryDiscountPercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_gravity="start"
            android:textSize="18dp"
            android:textColor="@color/mpsdk_color_payer_costs_no_rate"
            android:text="@string/mpsdk_review_summary_discount" />
        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkReviewSummaryDiscountsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="end"
            android:textSize="18dp"
            android:textColor="@color/mpsdk_color_payer_costs_no_rate"
            tools:text="$124"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mpsdkReviewSummarySubtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <com.mercadopago.customviews.MPTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="start"
            android:textSize="18dp"
            android:text="@string/mpsdk_review_summary_subtotal" />
        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkReviewSummarySubtotalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:textSize="18dp"
            tools:text="$124"/>
    </LinearLayout>
    <View
        android:id="@+id/mpsdkFirstSeparator"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/mpsdk_separator"/>
    <LinearLayout
        android:id="@+id/mpsdkReviewSummaryPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <com.mercadopago.customviews.MPTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="start"
            android:textSize="18dp"
            android:text="@string/mpsdk_review_summary_pay" />
        <FrameLayout
            android:id="@+id/mpsdkReviewSummaryPayerCostContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>
    <View
        android:id="@+id/mpsdkSecondSeparator"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/mpsdk_separator"/>
    <LinearLayout
        android:id="@+id/mpsdkReviewSummaryTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <com.mercadopago.customviews.MPTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="start"
            android:textSize="18dp"
            android:text="@string/mpsdk_review_summary_total" />
        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkReviewSummaryTotalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:textSize="18dp"
            tools:text="$124"/>
    </LinearLayout>
    <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkTEA"
            android:includeFontPadding="false"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:textSize="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="TEA 0,00%"/>
    <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkCFT"
            android:includeFontPadding="false"
            android:visibility="gone"
            android:textSize="28dp"
            android:gravity="center"
            app:fontStyle="light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="CFT 0,00%"/>
    <FrameLayout
        android:id="@+id/mpsdkReviewSummaryConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="33dp"
        android:visibility="visible"
        android:focusable="true"
        android:background="@drawable/mpsdk_button_bg_stroke">
        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkReviewButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textColor="@color/mpsdk_white_background"
            android:text="@string/mpsdk_confirm"/>
    </FrameLayout>
</LinearLayout>