<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mpsdk_color_light_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/mpsdk_color_light_grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mpsdk_color_pending_background"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mpsdkIcon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="14dp"
                        android:tint="@color/mpsdk_color_pending_image"
                        android:src="@drawable/icon_pending"
                        android:layout_gravity="center_horizontal" />

                    <com.mercadopago.customviews.MPTextView
                        android:id="@+id/mpsdkPendingTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="17dp"
                        android:paddingRight="17dp"
                        android:gravity="bottom|center"
                        android:layout_marginTop="10dp"
                        android:textSize="22dp"
                        android:text="@string/mpsdk_title_pending" />

                    <com.mercadopago.customviews.MPTextView
                        android:id="@+id/mpsdkPendingSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="bottom|center"
                        android:textSize="15dp"
                        android:text="@string/mpsdk_subtitle_pending_contingency" />

                    <View
                        android:id="@+id/mpsdkTitleSeparator"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/mpsdk_separator"
                        android:layout_gravity="center_horizontal|bottom" />
                </LinearLayout>
                <com.mercadopago.customviews.MPTextView
                    android:id="@+id/mpsdkExitPending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/mpsdk_text_continue"
                    android:textColor="@color/mpsdk_color_link"
                    android:textSize="@dimen/mpsdk_small_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>